mock objects new 'domain' project

--- a/it.unibo.radarSystem22/userDocs/radarSystem22.html
+++ b/it.unibo.radarSystem22/userDocs/radarSystem22.html
@@ -259,7 +259,14 @@ Primo progetto.
 	</ul>
 </div>-->
 
-<h2>Test plans</h2> 
+<h2>Test plans</h2>
+<div class="remark">
+	<p>L'utente pone un ostacolo a distanza d&ltDILIMT dal sensore → il led si deve accendere</p>
+	<p>L'utente allontana l'ostacolo da sensore → deve essere visualizzata la variazione di posizione sul radar</p>
+	<p>Si continua ad allontanare l'ostacolo, superando la distanza d&gtDILIMT → il led si deve spegnere. </p>
+</div>
+
+<h2>Project</h2> 
 <div class="remark">
 	<ol>
 		<li>Test snippet di codice forniti e eventuali modifiche per rendere compatibili i programmi per architettura a 64 bit</li>
@@ -268,8 +275,6 @@ Primo progetto.
 		<li>É stata modificata la classe <a href="../src/it/unibo/radarSystem22/main/RadarUsageMain.java">RadarUsageMain.java</a></li>
 	</ol>
 </div>
-
-<h2>Project</h2> 
  
 </div>
 
