--- a/it.unibo.radarSystem22/userDocs/radarSystem22.html
+++ b/it.unibo.radarSystem22/userDocs/radarSystem22.html
@@ -271,9 +271,11 @@ Primo progetto.
 	<ol>
 		<li>Test snippet di codice forniti e eventuali modifiche per rendere compatibili i programmi per architettura a 64 bit</li>
 		<li>A partire dallo <a href="../rpi/code/modified/c">snippet</a> di condice C che misura e fa lampeggiare il led sono state aggiunte delle funzioni per la realizzazione di un server UDP in ascolto sulla porta 8080 (<a href="../rpi/LedBlinkSonarUdp.c">programma realizzato</a>). <br> Ad ogni pacchetto di richiesta ne viene inviato uno di risposta con la distanza (il server lavora su un thread separato) </li>
-		<li>É stata creata la classe <a href="../src/it/unibo/radarSystem22/main/ConnClient.java">ConnClient.java</a> che si occupa di effettuare una richiesta al server</li>
-		<li>É stata modificata la classe <a href="../src/it/unibo/radarSystem22/main/RadarUsageMain.java">RadarUsageMain.java</a></li>
+		<li>É stata creata la classe <a href="../src/it/unibo/radarSystem22/oldUdp/ConnClient.java">ConnClient.java</a> che si occupa di effettuare una richiesta al server</li>
+		<li>É stata modificata la classe <a href="../src/it/unibo/radarSystem22/oldUdp/RadarUsageMain.java">RadarUsageMain.java</a></li>
 	</ol>
+	<h5> Architettura sistema </h5>
+	<center><img src="img/architecture_old_udpProj.png" width="40%"></img></center>
 </div>
  
 </div>
@@ -303,7 +305,7 @@ Primo progetto.
 <p>By Loris Giannatempo <br>
 Email: loris.giannatempo@studio.unibo.it <br>
 Git: https://github.com/LorisGiann/ISS-projects</p>
-<img alt="mbot" src="img/20220223_182938.jpg" width="30%" height="30%">
+<img alt="mbot" src="img/me.jpg" width="30%" height="30%">
 
 
 </div> 
