--- a/it.unibo.radarSystem22/userDocs/radarSystem22.html
+++ b/it.unibo.radarSystem22/userDocs/radarSystem22.html
@@ -270,7 +270,7 @@ Primo progetto.
 <div class="remark">
 	<ol>
 		<li>Test snippet di codice forniti e eventuali modifiche per rendere compatibili i programmi per architettura a 64 bit</li>
-		<li>A partire dallo <a href="../rpi/code/modified/c">snippet</a> di condice C che misura e fa lampeggiare il led sono state aggiunte delle funzioni per la realizzazione di un server UDP in ascolto sulla porta 8080 (<a href="../rpi/LedBlinkSonarUdp.c">programma realizzato</a>). <br> Ad ogni pacchetto di richiesta ne viene inviato uno di risposta con la distanza (il server lavora su un thread separato) </li>
+		<li>A partire dallo <a href="../rpi/code/modified/c/LedBlinkSonar.c">snippet</a> di condice C che misura e fa lampeggiare il led sono state aggiunte delle funzioni per la realizzazione di un server UDP in ascolto sulla porta 8080 (<a href="../rpi/LedBlinkSonarUdp.c">programma realizzato</a>). <br> Ad ogni pacchetto di richiesta ne viene inviato uno di risposta con la distanza (il server lavora su un thread separato) </li>
 		<li>É stata creata la classe <a href="../src/it/unibo/radarSystem22/oldUdp/ConnClient.java">ConnClient.java</a> che si occupa di effettuare una richiesta al server</li>
 		<li>É stata modificata la classe <a href="../src/it/unibo/radarSystem22/oldUdp/RadarUsageMain.java">RadarUsageMain.java</a></li>
 	</ol>
